Make the site responsive

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </div>
         <!-- ==================== THE RESULT ==================== -->
         <div class="container">
-            <div class="row" id="displayPlace">
-                
+            <div class="row theParent" id="displayPlace">
+                <!-- DisplayFunction will run here -->
             </div>
         </div>
     </div>
